--- a/src/locale/i18n/en.json
+++ b/src/locale/i18n/en.json
@@ -227,7 +227,8 @@
         "virtuais": "VIRTUAL",
         "desafio": "CHALLENGE",
         "acumuladao": "ACCUMULATED",
-        "loteria": "LOTERY"
+        "loteria": "LOTERY",
+        "promocao": "PROMOTIONS"
     },
     "submenu": {
         "copa22": "Cup 2022",
