--- a/src/locale/i18n/en.json
+++ b/src/locale/i18n/en.json
@@ -205,7 +205,8 @@
         "linkCopiado": "Link copied!",
         "indicar": "Indicate",
         "semPermissaoAcesso": "No access permission",
-        "cadastroMenorDeIdade": "Registration only permitted for people over 18 years of age."
+        "cadastroMenorDeIdade": "Registration only permitted for people over 18 years of age.",
+        "alertaChavePixCpf": "When requesting the withdrawal, it will be processed through the Pix key associated with your CPF (Brazilian Tax ID). Ensure that your CPF is filled in correctly."
     },
     "dias": {
         "ontem": "Yesterday",
