--- a/src/locale/i18n/en.json
+++ b/src/locale/i18n/en.json
@@ -223,7 +223,7 @@
     "menu": {
         "esportes": "SPORTS",
         "cassino": "CASINO",
-        "cassino": "LIVE CASINO",
+        "cassino-aovivo": "LIVE CASINO",
         "virtuais": "VIRTUAL",
         "desafio": "CHALLENGE",
         "acumuladao": "ACCUMULATED",
