wip resgate manual da comissao do indique e ganhe

--- a/src/locale/i18n/pt.json
+++ b/src/locale/i18n/pt.json
@@ -458,7 +458,8 @@
         "depositoRealizado": "Depósito realizado",
         "indicadoRealizouDepsito": "Seu indicado realizou o primeiro depósito",
         "indicacaoRecebida": "Indicação recebida",
-        "cadastroRealizado": "Cadastro foi realizado"
+        "cadastroRealizado": "Cadastro foi realizado",
+        "resgatar": "Resgatar"
     },
     "data":{
         "dataHora": "{{data}} às {{hora}}",
