--- a/src/locale/i18n/en.json
+++ b/src/locale/i18n/en.json
@@ -458,7 +458,8 @@
         "depositoRealizado": "Deposit made",
         "indicadoRealizouDepsito": "Your referral made the first deposit",
         "indicacaoRecebida": "Indication received",
-        "cadastroRealizado": "Registration was completed"
+        "cadastroRealizado": "Registration was completed",
+        "resgatar": "Redeem"
     },
     "data":{
         "dataHora": "{{data}} at {{hora}}",
