--- a/src/locale/i18n/pt.json
+++ b/src/locale/i18n/pt.json
@@ -319,7 +319,7 @@
         "paraProsseguirAtualizeChavePix": "Para prosseguir, atualize seu cadastro com a sua chave PIX",
         "preenchaCadastroCompleto": "Por favor, preencha seu cadastro por completo para realizar a solictação de saque.",
         "alertaTitularChave": "Obs. ¹ Só será realizado saques em chaves pix pertencentes ao titular da conta.",
-        "alertaChaveCelular": "² Ao cadastrar a Chave Pix tipo telefone, utilize o padrão: DDD sem o zero, seguido do número (ex.: 81998765432). Agradecemos pela sua atenção.",
+        "alertaChaveCelular": "² Ao cadastrar a Chave Pix tipo telefone, utilize o padrão: DDD sem o zero, seguido do número (ex.: 81998765432).",
         "cpfEmailTelefoneAleatoria": "CPF, E-mail, Telefone ou Aleatória",
         "pagamentoExclusivoChaveCPF": "Informamos que ao solicitar o saque ele será realizado exclusivamente para a chave pix CPF do titular da conta.",
         "solicitacoesRecentes": "Solicitações de saque recentes",
