--- a/src/locale/i18n/pt.json
+++ b/src/locale/i18n/pt.json
@@ -201,7 +201,8 @@
         "regrasCondicoes": "Regras e condições",
         "semPermissaoAcesso": "Sem permissão de acesso",
         "cadastroMenorDeIdade": "Cadastro permitido apenas para maiores de 18 anos.",
-        "cadastro": "Cadastro"
+        "cadastro": "Cadastro",
+        "esportivo": "esportivo"
     },
     "dias": {
         "ontem": "Ontem",
@@ -461,6 +462,22 @@
         "cadastroRealizado": "Cadastro foi realizado",
         "resgatar": "Resgatar",
         "limiteResgate": "Limite resgate"
+    },
+    "regras_indique_ganhe": {
+        "primeiro_paragrafo_um": "Indique seus amigos e ganhe R${{valorGanhoPorIndicacao}} em saldo {{tipoSaldoGanho}}!!",
+        "primeiro_paragrafo_dois": "Ficou interessado? Então veja abaixo todas as regras e condições",
+        "lista_elegibilidade": "Elegibilidade",
+        "lista_elegibilidade_text": "Para participar do programa de Indique e Ganhe você deve ser um membro registrado do site. Ao indicar usuários, você estará concordando com estes termos e condições.",
+        "lista_como_indicar": "Como indicar",
+        "lista_como_indicar_text": "Para indicar um novo usuário, você deverá compartilhar o link de indicação na seção \"Indique e ganhe\" da sua conta, localizada no menu Promoções. O usuário indicado deverá se registrar usando seu link de indicação. O indicador terá um total de {{limiteIndicacoes}} indicações ao qual serão legíveis de comissionamento as demais que ultrapassarem essa quantidade não serão comissionadas.",
+        "lista_bonus_indicador": "Bônus para o Indicador",
+        "lista_bonus_indicador_text": "A cada usuário que você indicar, que se registre e faça um depósito de no mínimo R${{valorMinDepositado}} e realizar apostas de no mínimo R${{valorMinApostado}} em um prazo de {{qtdDiasRequisitos}} dias, você ganhará R${{valorGanhoPorIndicacao}} em saldo {{tipoSaldoGanho}}. Este saldo será liberado para resgate na aba minhas indicações em até 24 horas após o INDICADO cumprir as regras da promoção, você terá um prazo de {{prazoResgateSaldo}} dias para resgatar.",
+        "real_sacavel": "real (sacável)",
+        "lista_deposito_indicado": "Depósito do Indicado",
+        "lista_deposito_indicado_text": "O usuário indicado deve realizar um depósito de no mínimo R${{valorMinDepositado}} na sua conta e fazer uma aposta de no mínimo R${{valorMinApostado}} para que o saldo de R${{valorGanhoPorIndicacao}} seja creditado na conta do indicador.",
+        "lista_prevencao_fraudes": "Prevenção de fraudes",
+        "lista_prevencao_fraudes_text": "A {{nomeBanca}} monitora ativamente o uso do sistema de Indique e Ganhe para prevenir fraudes. Qualquer tentativa de fraude, como a criação de múltiplas contas a partir do mesmo endereço IP, será considerada apenas o primeiro cadastro legível para ganho do saldo as demais serão desconsideradas.",
+        "ultimo_paragrafo": "Ao participar do sistema de Indique e Ganhe, você concorda que leu, entendeu e concorda em cumprir estas regras. É responsabilidade do indicador garantir que os usuários indicados estejam cientes e concordem com estas regras antes de se registrarem na {{nomeBanca}}."
     },
     "data":{
         "dataHora": "{{data}} às {{hora}}",
