--- a/src/locale/i18n/pt.json
+++ b/src/locale/i18n/pt.json
@@ -201,7 +201,8 @@
         "regrasCondicoes": "Regras e condições",
         "semPermissaoAcesso": "Sem permissão de acesso",
         "cadastroMenorDeIdade": "Cadastro permitido apenas para maiores de 18 anos.",
-        "cadastro": "Cadastro"
+        "cadastro": "Cadastro",
+        "rodadaGratis": "Rodada grátis"
     },
     "dias": {
         "ontem": "Ontem",
