--- a/src/locale/i18n/en.json
+++ b/src/locale/i18n/en.json
@@ -202,7 +202,13 @@
         "semPermissaoAcesso": "No access permission",
         "cadastroMenorDeIdade": "Registration only permitted for people over 18 years of age.",
         "cadastro": "Registration",
-        "rodadaGratis": "Free Spin"
+        "rodadaGratis": "Free Spin",
+        "dataVencimento": "Expiration date",
+        "quantidade": "Quantity",
+        "jogarAgora": "Play now",
+        "nenhumaRodadaGratis": "No free spins found.",
+        "opcaoPromocao": "Select one of the options to view the current promotions.",
+        "resultadosEncontrados": "{{quantidade}} results were found."
     },
     "dias": {
         "ontem": "Yesterday",
