--- a/src/locale/i18n/pt.json
+++ b/src/locale/i18n/pt.json
@@ -202,7 +202,13 @@
         "semPermissaoAcesso": "Sem permissão de acesso",
         "cadastroMenorDeIdade": "Cadastro permitido apenas para maiores de 18 anos.",
         "cadastro": "Cadastro",
-        "rodadaGratis": "Rodada grátis"
+        "rodadaGratis": "Rodada grátis",
+        "dataVencimento": "Data de vencimento",
+        "quantidade": "Quantidade",
+        "jogarAgora": "Jogar Agora",
+        "nenhumaRodadaGratis": "Nenhuma rodada grátis encontrada.",
+        "opcaoPromocao": "Selecione uma das opções para visualizar as promoções ativas.",
+        "resultadosEncontrados": "Foram encontrados {{quantidade}} resultados"
     },
     "dias": {
         "ontem": "Ontem",
