criação de configuração de ativação individual e ajustes visuais

--- a/src/locale/i18n/en.json
+++ b/src/locale/i18n/en.json
@@ -42,6 +42,7 @@
         "nenhumEventoDisponivelNesteDia": "No events available on this day",
         "nenhumJogoEncontrado": "No game found",
         "nenhumEventoAoVivoDisponivel": "No live events available at this time!",
+        "nenhumModalidadeAoVivoDisponivel": "No live modality enabled at the moment!",
         "saldo": "Balance",
         "minhaConta": "My Account",
         "salvar": "Save",
