--- a/src/locale/i18n/pt.json
+++ b/src/locale/i18n/pt.json
@@ -43,6 +43,7 @@
         "nenhumEventoDisponivelNesteDia": "Nenhum evento disponível neste dia",
         "nenhumJogoEncontrado": "Nenhum jogo encontrado",
         "nenhumEventoAoVivoDisponivel": "Nenhum evento ao vivo disponível no momento!",
+        "nenhumModalidadeAoVivoDisponivel": "Nenhuma modalidade ao vivo habilitada no momento!",
         "saldo": "Saldo",
         "minhaConta": "Minha Conta",
         "salvar": "Salvar",
