melhorando tradução e atualizando branch

--- a/src/locale/i18n/pt.json
+++ b/src/locale/i18n/pt.json
@@ -212,7 +212,8 @@
         "opcaoPromocao": "Selecione uma das opções para visualizar as promoções ativas.",
         "resultadosEncontrados": "Foram encontrados {{quantidade}} resultados",
         "selecioneChavePix": "Selecione a chave pix",
-        "alertaSaque": "Apenas saques para chaves Pix vinculadas ao titular da conta são permitidos."
+        "alertaSaque": "Apenas saques para chaves Pix vinculadas ao titular da conta são permitidos.",
+        "chaveAleatoria": "Chave aleatória"
     },
     "dias": {
         "ontem": "Ontem",
