--- a/src/locale/i18n/en.json
+++ b/src/locale/i18n/en.json
@@ -212,7 +212,8 @@
         "opcaoPromocao": "Select one of the options to view the current promotions.",
         "resultadosEncontrados": "{{quantidade}} results were found.",
         "selecioneChavePix": "select your pix key",
-        "alertaSaque": "Only withdrawals to Pix keys linked to the account holder are allowed."
+        "alertaSaque": "Only withdrawals to Pix keys linked to the account holder are allowed.",
+        "chaveAleatoria": "Random key"
     },
     "dias": {
         "ontem": "Yesterday",
