alteracao das urls para cassino

--- a/src/locale/i18n/pt.json
+++ b/src/locale/i18n/pt.json
@@ -287,7 +287,8 @@
         "mesa": "Mesa",
         "destaques": "Destaques",
         "virtuais": "Virtuais",
-        "aoVivo": "Ao Vivo"
+        "aoVivo": "Ao Vivo",
+        "bingo": "Bingo"
     },
     "cartoes": {
         "titulo": "Cartões",
