--- a/src/locale/i18n/en.json
+++ b/src/locale/i18n/en.json
@@ -287,7 +287,8 @@
         "mesa": "Table",
         "destaques": "Highlights",
         "virtuais": "Virtuals",
-        "aoVivo": "Live Casino"
+        "aoVivo": "Live Casino",
+        "bingo": "Bingo"
     },
     "cartoes": {
         "titulo": "Cards",
