widgets da home

--- a/src/locale/i18n/en.json
+++ b/src/locale/i18n/en.json
@@ -162,6 +162,7 @@
         "loginExpirouEntreNovamente": "Login timed out, please login again.",
         "chavePix": "PIX Key",
         "cassino": "Casino",
+        "cassinoAoVivo": "Live Casino",
         "reembolso": "Refund",
         "editarPerfil": "Edit Profile",
         "maisOpcoes": "More options",
