--- a/src/locale/i18n/pt.json
+++ b/src/locale/i18n/pt.json
@@ -162,6 +162,7 @@
         "loginExpirouEntreNovamente": "Login expirou, entre novamente.",
         "chavePix": "Chave PIX",
         "cassino": "Cassino",
+        "cassinoAoVivo": "Cassino Ao Vivo",
         "reembolso": "Reembolso",
         "editarPerfil": "Editar Perfil",
         "maisOpcoes": "Mais opções",
