--- a/src/locale/i18n/en.json
+++ b/src/locale/i18n/en.json
@@ -87,7 +87,7 @@
         "creditos": "Credits",
         "debito": "Debit",
         "debitos": "Debits",
-        "depositar": "Depositar",
+        "depositar": "Deposit",
         "aCraseado": "to",
         "apostador": "Better",
         "codigo": "Code",
@@ -214,7 +214,13 @@
         "selecioneChavePix": "select your pix key",
         "alertaSaque": "Only withdrawals to Pix keys linked to the account holder are allowed.",
         "chaveAleatoria": "Random key",
-        "history": "History"
+        "history": "History",
+        "promoCode": "Promo code",
+        "promoCodePlaceholder": "EX.: BONUSREGISTRATION"
+    },
+    "bet": {
+        "sportsBetting": "Sports betting",
+        "casinoBetting": "Casino betting"
     },
     "dias": {
         "ontem": "Yesterday",
@@ -356,12 +362,14 @@
         "depositoERegistrado": "Deposit - Registered",
         "selecioneUmaFormaDeDeposito": "Select a deposit method",
         "informeOValor": "Enter value",
+        "enterAmount": "Enter the amount for the deposit",
         "seuPixFoiCreditado": "Your pix was successfully credited, your new balance is: R$ {{novoSaldo}}",
-        "valorMinimo": "Minimum deposit amount",
+        "valorMinimo": "Minimum amount",
         "nenhumaModalidadeDeDeposito": "No deposit modality available. Please contact support.",
         "depositoRegistrado": "Deposit - Registered",
         "soliciteEntrandoEmContatoCom": "Request a deposit by contacting us via Whatsapp: {{whatsapp}}",
-        "depositosRecentes": "Recent deposits"
+        "depositosRecentes": "Recent deposits",
+        "depositDetails": "Deposit details"
     },
     "footer": {
         "afiliados": "Partnership",
@@ -431,14 +439,15 @@
         "qtdMovimentacoesNoPeriodo": "Qty. Movements in the Period from {{de}} - {{ate}}",
         "nenhumaMovimentacaoNoPeriodo": "No transactions performed in the period and/or with current filter.",
         "natureza": "Nature",
-        "desejaReceberBonusPrimeiroDeposito": "Do you want to receive First Deposit Bonus?",
+        "desejaReceberBonusPrimeiroDeposito": "Do you want to receive first deposit bonus?",
         "receberBonus": "Receive Bonus - Sport",
         "naoQueroBonus": "I don't want bonus",
         "valorMinimoSaque": "Minimum withdrawal amount",
         "valorMaximoSaqueDiario": "Maximum daily withdrawal amount",
         "valorMaximoSaqueMensal" : "Maximum monthly withdrawal amount",
         "receberBonusCassino": "Receive Bonus - Casino",
-        "transactions": "Transactions"
+        "transactions": "Transactions",
+        "paymentGateway": "Payment gateway"
     },
     "rollover":{
         "nenhumRollover": "No rollover.",
@@ -446,7 +455,12 @@
         "ativo": "Active",
         "completado": "Completed",
         "cancelado": "Canceled",
-        "vencido": "Vanquished"
+        "vencido": "Vanquished",
+        "bonusRules": "Bonus rules",
+        "bonusForfeited": "Bonus forfeited",
+        "noBonus": "No bonus",
+        "bonusWillBeForfeited": "Your bonus will be forfeited.",
+        "upTo": "up to"
     },
     "indique_ganhe":{
         "indiqueGanhe": "Refer and earn",
