--- a/src/locale/i18n/en.json
+++ b/src/locale/i18n/en.json
@@ -210,7 +210,6 @@
         "jogarAgora": "Play now",
         "nenhumaRodadaGratis": "No free spins found.",
         "opcaoPromocao": "Select one of the options to view the current promotions.",
-        "resultadosEncontrados": "{{quantidade}} results were found.",
         "selecioneChavePix": "select your pix key",
         "alertaSaque": "Only withdrawals to Pix keys linked to the account holder are allowed.",
         "chaveAleatoria": "Random key",
@@ -369,7 +368,9 @@
         "depositoRegistrado": "Deposit - Registered",
         "soliciteEntrandoEmContatoCom": "Request a deposit by contacting us via Whatsapp: {{whatsapp}}",
         "depositosRecentes": "Recent deposits",
-        "depositDetails": "Deposit details"
+        "depositDetails": "Deposit details",
+        "depositText": "To make a deposit via {{paymentMethod}}, enter the desired deposit amount in the field below, select whether you want to receive the first deposit bonus, provide the promotional code if available, and click on the “Deposit“ button. A QR Code will be generated and displayed on the screen for you to make the payment.",
+        "depositTextWithoutBonus": "To make a deposit via {{paymentMethod}}, enter the desired deposit amount in the field below, provide the promotional code if available, and click on the “Deposit“ button. A QR Code will be generated and displayed on the screen for you to make the payment."
     },
     "footer": {
         "afiliados": "Partnership",
