--- a/src/locale/i18n/pt.json
+++ b/src/locale/i18n/pt.json
@@ -351,7 +351,7 @@
         "avisoBonus": "Informamos que ao solicitar saque, todo o bônus ativo será zerado e perdido definitivamente.",
         "withdrawalDetails": "Detalhes do saque",
         "availableBalanceForWithdrawal": "Saldo disponível para saque",
-        "safeWithdrawalAlert": "É importante que você use uma conta bancária vinculada ao seu número de CPF que está cadastrado.",
+        "safeWithdrawalAlert": "Por motivos de segurança, os saques só serão efetivados para contas pertencentes ao CPF cadastrado.",
         "enterPixKey": "Informe o tipo de chave PIX",
         "minimumWithdrawal": "Saque mínimo",
         "dailyMaximum": "Máximo diário",
