--- a/src/locale/i18n/pt.json
+++ b/src/locale/i18n/pt.json
@@ -214,7 +214,9 @@
         "resultadosEncontrados": "Foram encontrados {{quantidade}} resultados",
         "selecioneChavePix": "Selecione a chave pix",
         "alertaSaque": "Apenas saques para chaves Pix vinculadas ao titular da conta são permitidos.",
-        "chaveAleatoria": "Chave aleatória"
+        "chaveAleatoria": "Chave aleatória",
+        "jogosDestaques": "Jogos Destaques",
+        "jogosAoVivo": "Jogos Ao Vivo"
     },
     "dias": {
         "ontem": "Ontem",
